# mavhoney-d46

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  attack_simulator_fixed.py  config.py  dataset_exporter.py  docker-compose.yml  export_threat_intel.py  graph_generator.py  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt
analysis/: __init__.py  ablation_bootstrap.py  ablation_bootstrap_results.json  case_studies.py  exploratory.py  failure_analysis.py  generate_figures.py  temporal_evolution.py  threshold_sensitivity.py  tifs_analysis.py  tifs_results.json
config/: shodan.json  telegram.json
dashboard/: __init__.py  admin_audit.py  app.py  auth.py
dataset_paper/: generate_figures.py
honeypot/: __init__.py  adaptive_responses.py  adaptive_timing.py  attacker_labeler.py  biometrics.py  canary_tokens.py  command_order_detector.py  correlation_engine.py  cve_simulator.py  daily_snapshot.py  database.py  deception_engine.py  decoy_fleet.py  enhanced_honeypot.py  entropy_scorer.py  feature_extractor.py  fingerprint.py  firewall.py  fuzz_detector.py  geoip_service.py  health_monitor.py  log_integrity.py  logger.py  mavlink_honeypot.py  mitre_mapper.py  mode_scheduler.py  replay_detector.py  sequence_model.py  session_recorder.py  static_honeypot.py  static_with_tcp_honeypot.py  tarpit.py  telegram_bot.py  threat_predictor.py
ml/: FEATURES.md  MODEL_REGISTRY.md  __init__.py  anomaly_detector.py  cross_validator.py  evaluator.py  skill_classifier.py  train_model.py
reproducibility/: README.md  (+2 more)
(+28 files in other folders)
