[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavlink-honeypot"
version = "2.0.0"
description = "Adaptive MAVLink Honeypot for drone security research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "pymavlink>=2.4.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3.0", "pandas>=2.0.0"]
geoip = ["geoip2>=4.7.0"]
telegram = ["python-telegram-bot>=20.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_strict_optional = true

[tool.setuptools.packages.find]
include = ["honeypot*", "dashboard*", "ml*"]
